[project]
name = "testzeus-execute"
version = "0.1.0"
description = ""
authors = [
    {name = "Shahalt1",email = "shahalthayyil2020@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
